Closed
Bug 1799168
Opened 3 years ago
Closed 3 years ago
nr_ice_component_can_candidate_addr_pair needs to check transport protocol
Categories
(Core :: WebRTC: Networking, defect, P2)
Core
WebRTC: Networking
Tracking
()
RESOLVED
FIXED
108 Branch
Tracking | Status | |
---|---|---|
firefox108 | --- | fixed |
People
(Reporter: bwc, Assigned: bwc)
Details
Attachments
(2 files)
The lack of this check is causing the creation of invalid candidate pairs, which can lead to assertions in debug builds.
Assignee | ||
Comment 1•3 years ago
|
||
Assignee | ||
Comment 2•3 years ago
|
||
Depends on D161321
Assignee | ||
Comment 3•3 years ago
|
||
Assignee | ||
Comment 4•3 years ago
|
||
Might be seeing new failures on test-linux1804-64-tsan-qr mochitest? Here's a baseline try push.
https://treeherder.mozilla.org/jobs?repo=try&revision=8f0181ff7533ac0a26339d87fe8648452c261c34
Assignee | ||
Comment 5•3 years ago
|
||
Yeah, those failures aren't new. Try looks fine.
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/592ba3927d5b
Test case for bug. r=mjf
https://hg.mozilla.org/integration/autoland/rev/9c0f6b4fc3d0
Ensure that we don't pair candidates with different protocols. r=mjf
Comment 7•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/592ba3927d5b
https://hg.mozilla.org/mozilla-central/rev/9c0f6b4fc3d0
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox108:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•