Bug 1799168: Ensure that we don't pair candidates with different protocols. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D161322